# mimick

./: .gitignore  404.html  CHANGELOG.md  README.md  algorithm.md  data_formats.md  index.html  install.md  llms.txt  pyproject.toml  readme.md  robots.txt  sitemap.xml  test.hap1.fa  test.hap2.fa  usage.md
.github/: dependabot.yml
.github/workflows/: createrelease.yml  publishdocs.yml  retype-action.yml  tests.yml
MimickLinkedReads.jl/: Manifest.toml  Project.toml  README.md  using_mimick.jl.md
MimickLinkedReads.jl/src/: .ProcessFASTQ.jl  Barcodes.jl  Breakpoints.jl  Common.jl  FormatFASTQ.jl  Main copy.jl  Main.jl  MimickLinkedReads.jl  ProcessFASTA.jl  ProcessFASTQ copy.jl  ProcessFASTQ.jl  ProcessVariants.jl  Simulate.jl  Structs.jl  scratch.jl
MimickLinkedReads/src/: MimickLinkedReads.jl  ProcessFASTA.jl
TEST/: tst.generated.barcodes  tst.molecules
algorithm/: index.html
data_formats/: index.html
docs/: README.md  _navbar.md  _sidebar.md  algorithm.md  data_formats.md  index.html  install.md  retype.yml  simulation_process.md  usage.md
install/: index.html
mimick/: __main__.py  classes.py  cli_classes.py  common.py  file_ops.py  long_molecule.py  process_outputs.py  simulate_reads.py
mimick.jl/: Manifest.toml
mimick.py/: cli_classes.py  common.py
mimick/MimickLinkedReads.jl/: LICENSE  Manifest.toml  Project.toml  using_mimick.jl.md
mimick/MimickLinkedReads.jl/src/: Barcodes.jl  Breakpoints.jl  Common.jl  FormatFASTQ.jl  Main.jl  MimickLinkedReads.jl  ProcessFASTA.jl  ProcessVariants.jl  Structs.jl  scratch.jl
mimick/MimickLinkedReads.jl/test/: runtests.jl
old/: __main__ .iteratehaplo.py  __main__ copy.py  simulate copy.py  simulate_reads.bak.py
resources/: create_test_data.py  meta.yaml  mimick.yaml  test.bcf  test.vcf
resources/js/: config.js  prism.js  search.json
src/: __main__.py  classes.py  common.py  fastq_writer copy.py  fastq_writer.py  file_ops.py  long_molecule.py  mimick.py  process_outputs.py  simulate.py  simulate_reads.py
test/: create_test_data.py  fasta.fa  test.bc
usage/: index.html
